implementations/rust/ockam/ockam_node_test_attribute/tests/node_test/pass_macro_with_timeout_arg.stderr
error[E0601]: `main` function not found in crate `$CRATE`
 --> $DIR/pass_macro_with_timeout_arg.rs:1:1
  |
1 | / #[ockam_node_test_attribute::node_test(timeout = 1000)]
2 | | async fn my_test(ctx: &mut ockam::Context) -> ockam::Result<()> {
3 | |     ctx.stop().await
4 | | }
  | |_^ consider adding a `main` function to `$DIR/tests/node_test/pass_macro_with_timeout_arg.rs`
